--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,18 @@
-name: Deploy Vite App
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - main   # deploy whenever you push to main
+      - main   # or master if that's your default branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -29,4 +28,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          force_orphan: true
+          force_orphan: true   
