--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "ecommerce-dashboard",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://USERNAME.github.io/E-Comm-Dashboard",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/USERNAME/E-Comm-Dashboard.git"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +14,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "framer-motion": "^12.23.13",
